--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "mix",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.1",
         "autoprefixer": "^10.4.0",
-        "cross-env": "^7.0",
-        "css-loader": "^5.2.7",
-        "laravel-mix": "^6.0",
+        "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.5",
         "postcss-import": "^14.0.1",
+        "postcss-nesting": "^12.1.0",
         "tailwindcss": "^3.0.19",
+        "vite": "^5.0.0",
         "vue-template-compiler": "^2.6.12"
-    },
-    "dependencies": {
-        "postcss-nesting": "^12.1.0"
     }
 }
