Update slug validation rules
For reference, see https://statamic.dev/upgrade-guide/4-to-5#validation-rule-changes

--- a/resources/blueprints/collections/pages/pages.yaml
+++ b/resources/blueprints/collections/pages/pages.yaml
@@ -36,7 +36,7 @@ sections:
           required: true
           localizable: true
           validate:
-            - 'unique_entry_value:{collection},{id},{site}'
+            - 'new \Statamic\Rules\UniqueEntryValue({collection},{id},{site})'
       -
         handle: parent
         field:
