--- a/resources/blueprints/collections/blog/blog.yaml
+++ b/resources/blueprints/collections/blog/blog.yaml
@@ -100,7 +100,7 @@ sections:
           localizable: true
           validate:
             - required
-            - 'unique_entry_value:{collection},{id},{site}'
+            - 'new \Statamic\Rules\UniqueEntryValue({collection},{id},{site})'
       -
         handle: date
         field:
